#8 Clean up logging.

--- a/projects/net.splitcells.gel.sheath/bin/execute.example
+++ b/projects/net.splitcells.gel.sheath/bin/execute.example
@@ -10,4 +10,4 @@
 maven.execute \
     net.splitcells.gel.test.functionality.SchoolSchedulingTest \
     -Dnet.splitcells.dem.environment.config.StaticFlags.ENFORCING_UNIT_CONSISTENCY=false \
-    -Dnet.splitcells.dem.environment.config.StaticFlags.TELLING_STORY=true
+    -Dnet.splitcells.dem.environment.config.StaticFlags.TELLING_STORY=false
