#10 Create pure merger project.

--- a/projects/net.splitcells.dem/pom.xml
+++ b/projects/net.splitcells.dem/pom.xml
@@ -12,6 +12,11 @@
     </parent>
     <dependencies>
         <dependency>
+            <groupId>net.splitcells</groupId>
+            <artifactId>dem.merger</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.11.0</version>
