--- a/projects/net.splitcells.sep/pom.xml
+++ b/projects/net.splitcells.sep/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.splitcells</groupId>
-    <artifactId>ses</artifactId>
+    <artifactId>sep</artifactId>
     <name>State Network Optimization</name>
     <parent>
         <groupId>net.splitcells</groupId>
@@ -13,7 +13,7 @@
     <dependencies>
         <dependency>
             <groupId>net.splitcells</groupId>
-            <artifactId>gel.core</artifactId>
+            <artifactId>gel.sheath</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
