--- a/projects/net.splitcells.sep/bin/execute.example
+++ b/projects/net.splitcells.sep/bin/execute.example
@@ -8,6 +8,6 @@
 #
 # SPDX-License-Identifier: EPL-2.0 OR MIT
 maven.execute \
-    net.splitcells.gel.test.functionality.SchoolSchedulingTest \
+    net.splitcells.sep.test.functionality.SchoolSchedulingTest \
     -Dnet.splitcells.dem.environment.config.StaticFlags.ENFORCING_UNIT_CONSISTENCY=false \
     -Dnet.splitcells.dem.environment.config.StaticFlags.TELLING_STORY=false
