--- a/projects/net.splitcells.pom.java.defaults/pom.xml
+++ b/projects/net.splitcells.pom.java.defaults/pom.xml
@@ -108,6 +108,28 @@
     </dependencies>
     <profiles>
         <profile>
+            <id>deployable-jar</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>copy-dependencies</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>test-via-junit</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
