#119 Do not make always deployable jars, in order to save resources,
when these are not needed.
This also makes the target folder more cleaned up.

--- a/projects/net.splitcells.pom.java.defaults/pom.xml
+++ b/projects/net.splitcells.pom.java.defaults/pom.xml
@@ -110,7 +110,7 @@
         <profile>
             <id>deployable-jar</id>
             <activation>
-                <activeByDefault>true</activeByDefault>
+                <activeByDefault>false</activeByDefault>
             </activation>
             <build>
                 <plugins>
