--- a/projects/net.splitcells.pom.java.defaults/pom.xml
+++ b/projects/net.splitcells.pom.java.defaults/pom.xml
@@ -154,7 +154,7 @@
                             <useUnlimitedThreads>true</useUnlimitedThreads>
                             <!-- TODO Execute tests in parallel. parallel>all</parallel>
                             <useUnlimitedThreads>true</useUnlimitedThreads-->
-                            <excludedGroups>testing.functional</excludedGroups>
+                            <excludedGroups>testing.capabilities</excludedGroups>
                         </configuration>
                     </plugin>
                 </plugins>
