#138 Create quickstart project.

--- a/projects/net.splitcells.gel/pom.xml
+++ b/projects/net.splitcells.gel/pom.xml
@@ -10,5 +10,6 @@
         <module>../net.splitcells.gel.core</module>
         <module>../net.splitcells.gel.sheath</module>
         <module>../net.splitcells.gel.doc</module>
+        <module>../net.splitcells.gel.quickstart</module>
     </modules>
 </project>
