#s58 Implement hugo blog merging.

--- a/projects/net.splitcells.network.blog/bin/build
+++ b/projects/net.splitcells.network.blog/bin/build
@@ -8,4 +8,7 @@
 #
 # SPDX-License-Identifier: EPL-2.0 OR MIT
 set -e
+mvn clean
+./bin/build.source.dependencies
 ./bin/build.hugo
+./bin/build.gemini
