#10 Unify ANTLR file naming with rest of file naming.
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>

--- a/projects/net.splitcells.dem/pom.xml
+++ b/projects/net.splitcells.dem/pom.xml
@@ -58,9 +58,8 @@
                         <configuration>
                             <sourceDirectory>src/main/antlr4/net/splitcells/dem/source/code</sourceDirectory>
                             <includes>
-                                <include>Java11Grammar.g4</include>
-                                <include>Java_11_lexer.g4</include>
-                                <include>Java_11_parser.g4</include>
+                                <include>Java11Lexer.g4</include>
+                                <include>Java11Parser.g4</include>
                             </includes>
                             <visitor>true</visitor>
                             <listener>true</listener>
