#138 Test quickstart during build.
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>

--- a/projects/net.splitcells.gel.quickstart/pom.xml
+++ b/projects/net.splitcells.gel.quickstart/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>gel.quickstart</artifactId>
-    <name>Generic Allocator Sheath</name>
+    <name>Generic Allocator Quickstart</name>
     <parent>
         <groupId>net.splitcells</groupId>
         <artifactId>pom-java-defaults</artifactId>
