#43 Create jacoco code coverage report.
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>

--- a/.github/workflows/net.splitcells.system.build.yml
+++ b/.github/workflows/net.splitcells.system.build.yml
@@ -24,3 +24,4 @@ jobs:
           cd $GITHUB_WORKSPACE/projects/net.splitcells.system
           echo $GITHUB_WORKSPACE
           ./bin/build
+          bash <(curl -s https://codecov.io/bash) # Upload tests to codecov.io.
