#43 Activate jacoco code coverage report for Github build.
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>

--- a/projects/net.splitcells.pom.java.defaults/pom.xml
+++ b/projects/net.splitcells.pom.java.defaults/pom.xml
@@ -413,7 +413,7 @@
             <id>test-codecov</id>
             <activation>
                 <property>
-                    <name>test_codecov</name>
+                    <name>env.test_codecov</name>
                 </property>
             </activation>
             <build>
