--- a/projects/net.splitcells.dem/pom.xml
+++ b/projects/net.splitcells.dem/pom.xml
@@ -17,6 +17,11 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>net.splitcells</groupId>
+            <artifactId>dem.core</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>com.github.javaparser</groupId>
             <artifactId>javaparser-symbol-solver-core</artifactId>
             <version>3.22.0</version>
