--- a/projects/net.splitcells.system/pom.xml
+++ b/projects/net.splitcells.system/pom.xml
@@ -8,6 +8,7 @@
     <modules>
         <module>../net.splitcells.pom.java.defaults</module>
         <module>../pure/net.splitcells.dem.merger</module>
+        <module>../pure/net.splitcells.dem.core</module>
         <module>../net.splitcells.dem</module>
         <module>../net.splitcells.gel</module>
         <module>../net.splitcells.os.state.interface</module>
