--- a/projects/net.splitcells.system/pom.xml
+++ b/projects/net.splitcells.system/pom.xml
@@ -17,5 +17,6 @@
         <module>../net.splitcells.website.default.content</module>
         <module>../net.splitcells.sep</module>
         <module>../net.splitcells.network.blog</module>
+        <module>../net.splitcells.network.worker</module>
     </modules>
 </project>
