#162 Start with tests of the project containing most of Java code.
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>

--- a/projects/net.splitcells.network.worker/pom.xml
+++ b/projects/net.splitcells.network.worker/pom.xml
@@ -12,7 +12,7 @@
     <dependencies>
         <dependency>
             <groupId>net.splitcells</groupId>
-            <artifactId>dem</artifactId>
+            <artifactId>sep</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
