#170 Create basis for world renderer.
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>

--- a/projects/net.splitcells.system/pom.xml
+++ b/projects/net.splitcells.system/pom.xml
@@ -18,5 +18,6 @@
         <module>../net.splitcells.sep</module>
         <module>../net.splitcells.network.blog</module>
         <module>../net.splitcells.network.worker</module>
+        <module>../net.splitcells.cin</module>
     </modules>
 </project>
