--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <relativePath>projects/net.splitcells.pom.java.defaults/pom.xml</relativePath>
     </parent>
     <modules>
-        <module>projects/net.splitcells.system</module>
+        <module>projects/net.splitcells.system.root</module>
         <!--TODO Do not just uncomment the following. Otherwise, the maven project cannot be build. module>../net.splitcells.os.state.interface.lib.gpl.2</module-->
         <!--TODO module>../net.splitcells.os.state.interface.lib.gpl.3</module-->
     </modules>
