#115 Adjust paths to new project structure.
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>

--- a/bin/build
+++ b/bin/build
@@ -2,5 +2,5 @@
 # This tests every command.
 set -e
 export JAVA_VERSION=11
-cd projects/net.splitcells.system
+cd projects/net.splitcells.system.root
   ./bin/build
