#170 Exclude experimental tests for build.
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>

--- a/projects/net.splitcells.pom.java.defaults/pom.xml
+++ b/projects/net.splitcells.pom.java.defaults/pom.xml
@@ -162,7 +162,7 @@
                             <useUnlimitedThreads>true</useUnlimitedThreads>
                             <!-- TODO Execute tests in parallel. parallel>all</parallel>
                             <useUnlimitedThreads>true</useUnlimitedThreads-->
-                            <excludedGroups>testing_capabilities</excludedGroups>
+                            <excludedGroups>testing_capabilities,experimental_test</excludedGroups>
                             <argLine>${surefireArgLine}</argLine>
                         </configuration>
                     </plugin>
