#170 Add access to Cin in webserver.
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>

--- a/projects/net.splitcells.website.server/pom.xml
+++ b/projects/net.splitcells.website.server/pom.xml
@@ -31,6 +31,11 @@
         </dependency>
         <dependency>
             <groupId>net.splitcells</groupId>
+            <artifactId>sep</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>net.splitcells</groupId>
             <artifactId>network.worker</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
