--- a/projects/net.splitcells.gel.core/pom.xml
+++ b/projects/net.splitcells.gel.core/pom.xml
@@ -28,5 +28,10 @@
             <artifactId>poi-ooxml</artifactId>
             <version>4.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>net.splitcells</groupId>
+            <artifactId>website.server</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
