--- a/projects/net.splitcells.pom.java.defaults/pom.xml
+++ b/projects/net.splitcells.pom.java.defaults/pom.xml
@@ -189,6 +189,30 @@
             </dependencies>
         </profile>
         <profile>
+            <id>release</id>
+            <activation>
+                <property>
+                    <name>!release_disabled</name>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>attach-sources</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>develop</id>
             <activation>
                 <property>
