--- a/projects/net.splitcells.pom.java.defaults/pom.xml
+++ b/projects/net.splitcells.pom.java.defaults/pom.xml
@@ -164,7 +164,7 @@
                             <useUnlimitedThreads>true</useUnlimitedThreads>
                             <!-- TODO Execute tests in parallel. parallel>all</parallel>
                             <useUnlimitedThreads>true</useUnlimitedThreads-->
-                            <excludedGroups>testing_capabilities,experimental_test</excludedGroups>
+                            <excludedGroups>testing_capabilities,experimental_test,benchmarking_runtime</excludedGroups>
                             <argLine>${surefireArgLine}</argLine>
                         </configuration>
                     </plugin>
