#162 Add missing dependency to system project.
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>

--- a/projects/net.splitcells.system/pom.xml
+++ b/projects/net.splitcells.system/pom.xml
@@ -12,7 +12,7 @@
     <dependencies>
         <dependency>
             <groupId>net.splitcells</groupId>
-            <artifactId>sep</artifactId>
+            <artifactId>cin</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
