--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,10 @@
         <version>0.0.1-SNAPSHOT</version>
         <relativePath>projects/net.splitcells.pom.java.defaults/pom.xml</relativePath>
     </parent>
+    <properties>
+        <sonar.organization>www-splitcells-net</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+    </properties>
     <modules>
         <module>projects/net.splitcells.system.root</module>
         <!--TODO Do not just uncomment the following. Otherwise, the maven project cannot be build. module>../net.splitcells.os.state.interface.lib.gpl.2</module-->
