Cache Maven packages in CI.
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>

--- a/.github/workflows/net.splitcells.system.build.yml
+++ b/.github/workflows/net.splitcells.system.build.yml
@@ -19,6 +19,12 @@ jobs:
         with:
           java-version: '11'
           java-package: 'jdk'
+      - name: Cache Maven packages
+        uses: actions/cache@v1
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
       - name: Build
         run: |
           cd $GITHUB_WORKSPACE/projects/net.splitcells.system.root
