--- a/projects/net.splitcells.website.server/pom.xml
+++ b/projects/net.splitcells.website.server/pom.xml
@@ -8,6 +8,10 @@
         <version>0.0.1-SNAPSHOT</version>
         <relativePath>../net.splitcells.pom.java.defaults/pom.xml</relativePath>
     </parent>
+    <!--
+        SPDX-License-Identifier: EPL-2.0 OR MIT
+        SPDX-FileCopyrightText: Contributors To The `net.splitcells.*` Projects
+    -->
     <dependencies>
         <dependency>
             <groupId>org.commonmark</groupId>
