--- a/projects/net.splitcells.system.root/bin/build
+++ b/projects/net.splitcells.system.root/bin/build
@@ -1,12 +1,6 @@
 #!/usr/bin/env bash
-# Copyright (c) 2021 Mārtiņš Avots (Martins Avots) and others
-#
-# This program and the accompanying materials are made available under the
-# terms of the Eclipse Public License 2.0, which is available at
-# http://www.eclipse.org/legal/epl-2.0, or the MIT License,
-# which is available at https://spdx.org/licenses/MIT.html.
-#
 # SPDX-License-Identifier: EPL-2.0 OR MIT
+# SPDX-FileCopyrightText: Contributors To The `net.splitcells.*` Projects
 set -e
 ./bin/build.part.with.java
 ./bin/build.part.with.python
