#s118 Use offline build to SourceHut.
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>

--- a/.builds/net.splitcells.system.build.yml
+++ b/.builds/net.splitcells.system.build.yml
@@ -5,7 +5,8 @@ packages:
   - python3
 sources:
   - https://git.sr.ht/~splitcells-net/net.splitcells.network
+  - https://git.sr.ht/~splitcells-net/net.splitcells.network.m2
 tasks:
   - build: |
       cd net.splitcells.network/projects/net.splitcells.system.root
-      ./bin/build
+      ./bin/build.offline
