#78 Add missing license data.
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>

--- a/projects/net.splitcells.system.root/.gitignore
+++ b/projects/net.splitcells.system.root/.gitignore
@@ -1,3 +1,5 @@
+# SPDX-License-Identifier: EPL-2.0 OR MIT
+# SPDX-FileCopyrightText: Contributors To The `net.splitcells.*` Projects
 ### Intellji
 *.iml
 .idea/
