Schedule CodeQL for monthly execution.
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -24,6 +24,9 @@ jobs:
       actions: read
       contents: read
       security-events: write
+    on:
+      schedule:
+        - cron:  '0 0 1 * *' # Monthly execution is used for now, as there are now critical users.
 
     strategy:
       fail-fast: false
